shared/postgres/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: shared
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
