shared/postgres/postgres-ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-tcp
  namespace: shared
spec:
  entryPoints:
    - postgres
  routes:
  - match: HostSNI("*")
    services:
    - name: postgres
      port: 5432
